# piper_dual_arm_teleop

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
assets/mujoco_model/: pathfinder.xml  piper_description.xml  piper_dual_arm.xml  piper_dual_arm_position.xml  piper_dual_arm_position_full.xml  piper_dual_arm_torque.xml  piper_dual_arm_torque_full.xml
assets/urdf/: pathfinder.urdf  piper_description.urdf
cmake/: toolchain_aarch64.cmake
include/: arm_control.h  arm_controller.h  arm_controller.hpp  arm_hardware_interface.h  arm_ik.h  arm_interface.h  arm_model.h  arm_planner.h  arm_planner.hpp  arm_simulation_interface.h  codec.hpp  config.h  dual_arm_state_msg.hpp  error_codes.h  joint_state.h  log.h  log.hpp  messenger.hpp  modelxml.h  mujoco_backend.hpp  mujoco_frontend.hpp  mujoco_interface.hpp  multi_node_tree.hpp  piper_interface.hpp  piper_model.hpp  piper_model_builder.hpp  rigidbodytree.hpp  ringbuffer.hpp  teleop_task_runner.h  termination.h  trajectory_buffer.h  trajectory_buffer.hpp  trajectory_point.h  udp_channel.hpp  utils.hpp  whole_body_state_msg.hpp
matlab/: JointType.m  circular_trajectory.m  fake_error.m  getCentrifugalCoriolisMatrix.m  getEndEffectorBodyJacobian.m  getGravityCompensate.m  getInverseKinematics.m  getJointSpaceMassMatrix.m  getLinkComSpaceJacobian.m  getLinkComSpaceJacobianD.m  getLinkSpaceJacobian.m  getLinkVelocity.m  getTransforms.m  impedance_control.slx  load_robot.m  se3_adjoint.m  se3_log.m  test_gravity_torque.m  test_inv_dyn.m  test_inv_kin.m  test_jaco.m  test_nearest_inv_kin_solution.m  test_transform.m  trajectory_tracking.slx
script/: can_bringup.sh  plot_arm_pos_cmd.py  plot_ik_result.py
src/: arm_control.cpp  arm_controller.cpp  arm_hardware_interface.cpp  arm_ik.cpp  arm_interface.cpp  arm_model.cpp  arm_planner.cpp  arm_simulation_interface.cpp  client.cpp  deploy.cpp  log.cpp  main.cpp  pipermanager.cpp  server.cpp  sim.cpp  simulate.cpp  teleop_task_runner.cpp  test.cpp  tool.cpp  trajectory_buffer.cpp
test/: test_mujoco_backend.cpp
